This is bad practice but I actually reworked the sizing of sections in this branch. Now the site is fully modular on different devices and the maindash has much better spacing. Also added functionality for certain buttons as contactanos takes you to the contact form, same with the one in main dash. TODO: Fix the video to the hero banner.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,12 +27,12 @@
 
 .card {
     transition: all 0.3ms;
+    min-height: 100%;
 }
 
 
 .card-img-top {
-    width: 70%;
-    height: 5vw;
+    height: 200px;
     object-fit: cover;
 }
 
@@ -45,11 +45,16 @@
 }
 
 .section-block {
-    height: 700px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 4rem 1rem;
 }
+
+
+.section-block img {
+    max-height: 400px;
+    object-fit: cover;
+    width: 100%;
+}
+
 
 .centered {
     text-align: center;
@@ -147,4 +152,55 @@
 
 .font-times {
     font-family: "Times New Roman", Times, serif;
+}
+
+
+
+/* Team container */
+
+@keyframes team-animation {
+    from {opacity: 0;}
+    to {opacity: 1}
+}
+
+
+.team-container {
+    text-align: center;
+    border-radius: 3px;
+    background-color: lightgray;
+    padding: 50px;
+    margin: 10px;
+}
+
+.team-container.in-view {
+    animation: team-animation 2s ease;
+}
+
+.team-content {
+    padding: 20px;
+
+}
+
+.team-images {
+    margin: 12px;
+    padding: 12px;
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: gray;
+}
+
+
+
+body, html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
+* {
+  max-width: 100vw;
+  box-sizing: border-box;
 }
